--- a/03-Probability.ipynb
+++ b/03-Probability.ipynb
@@ -443,7 +443,7 @@
    "id": "26ad1c48",
    "metadata": {},
    "source": [
-    "### The problems of the *Chevalier de Méré*\n",
+    "## The problems of the *Chevalier de Méré*\n",
     "\n",
     "+ [A. Gombaud, Chevalier de Méré](https://en.wikipedia.org/wiki/Antoine_Gombaud) was an amateur mathematician from the 17th century who became interested in understanding gambling and applying Mathematics to it. He himself made no major contributions to solving the problems he raised, but he managed to get the attention of well known mathematicians such as Pascal, Fermat and later Laplace. In particular he got them thinking about the solution of these two famous seminal problems. When playing dice, what is more likely?\n",
     "\n",
@@ -494,7 +494,7 @@
    "id": "87eddf0a",
    "metadata": {},
    "source": [
-    "### The Birthday Paradox\n",
+    "## The Birthday Paradox\n",
     "\n",
     "+ This is another experiment that illustrates how bad our probabilistic intuition usually is. If we have a room (a large hall) with 367 or more people in it, then we are certain that there are two people in that room whose birthdays coincide. However if the number of people present is less then the probability of birthdays coincidence decreases. What is the smallest number of people in a room that leads to a coincidence probability bigger than 50%?\n",
     "\n",
@@ -516,7 +516,7 @@
    "id": "fb2e0e9e",
    "metadata": {},
    "source": [
-    "### Laplace's Method \n",
+    "## Laplace's Method \n",
     "\n",
     "+ This was historically the first result that made it possible to address the systematic computation of probabilities. But as we will see, its practical application is not always simple and it is also lacking from the theoretical perspective.\n",
     "\n",
@@ -534,7 +534,7 @@
     "$$\n",
     "In the example of the dice this implies $P(A) = P(\\text{even result}) = \\dfrac{3}{6} = \\dfrac{1}{2}$.\n",
     "\n",
-    "### Applying the Laplace's Method\n",
+    "## Applying the Laplace's Method\n",
     "\n",
     "+ Using Laplace's Method and Combinatorics (don't panic) to count the number of events in $A$ \n",
     "  ![](https://media.giphy.com/media/l0XtbC8EniiuwAEOQn/giphy-downsized-large.gif)  \n",
@@ -543,7 +543,9 @@
     "    + What is the probability of getting exactly one six when throwing three dice?\n",
     "    + If a box contains 20 cards with the numbers 1 to 20 printed on them and we choose two cards at random: what is the probability that those cards are precisely the cards with numbers 1 and 20? Does the probability depend on whether you pull the two cards at once or one after the other (without replacement in the second case)? And what happens if there is replacement?\n",
     "\n",
-    "+ It is important to understand that the Laplace's Method can not be considered a *definition* of Probability. For starters, it would be a circular definition. And more importantly it fails to provide the answer to situations where the intuition leads to a clear solution, such as the following:\n",
+    "+ Problems like these illustrate the fact that in order to make an effective use of Laplace's method you need to get *good at counting*. And believe me, counting is one of the hardest things to do in Mathematics.\n",
+    "\n",
+    "+ It is also important to understand that the Laplace's Method can not be considered a *definition* of Probability. For starters, it would be a circular definition. And more importantly it fails to provide the answer to situations where the intuition leads to a clear solution, such as the following:\n",
     "+ Pick a real number $x$ in the interval $[0, 1]$. What is the probability that $1/3 \\leq x \\leq 2/3$? What is your intuition telling you (shouting, actually)? But now try to apply our method. How many possible values of $x$ do we have? An infinite number. And how many of those belong to $[0, 1]$? Again, an infinite number. Thus we are left with $\\infty / \\infty$, which in this context is useless. However our intuition is clear, and we can use Python to check that it is good.\n",
     "\n",
     "+ **Exercise:** use NumPy to select tens or hundreds of thousands of points $x$ at random in the $[0, 1]$ interval. Now find the relative frequency of the event $1/3 \\leq x \\leq 2/3$.  "
@@ -572,22 +574,23 @@
    "id": "9097e1d7",
    "metadata": {},
    "source": [
-    "### Axiomatic Theory of Probability \n",
+    "## Axiomatic Theory of Probability \n",
     "\n",
-    "+ Los detalles técnicos son complicados pero, simplificando mucho hay tres ingredientes:$\\quad\\vspace{1mm}$\n",
+    "+ The theoretical details quickly become involved. But keeping things informal but simple there are three basic ingredients in our vision of Probability:  \n",
     "\n",
-    "    (a) Tenemos un *espacio muestral* $\\Omega$ que  es el conjunto de todos los posibles resultados de un experimento.  \n",
+    "  (a) First we need a *sample space* $\\Omega$ which is the set of all possible results of an experiment. You may also think that $\\Omega$ is the *population of interest* in the same sense that we have been using that term until now.   \n",
     "    \n",
-    "    (b) Un *suceso aleatorio* es (casi) cualquier subconjunto de $\\Omega$ (no *demasiado raro*).   \n",
+    "  (b) A *random event* is  (almost) any subset of $\\Omega$ (we exclude those subsets which are *too weird* in a mathematically precise sense).   \n",
     "    \n",
-    "    (c) Una *función probabilidad* que representaremos con la letra $P$ que  asigna un  número $P(A)$ a cada suceso aleatorio $A$ del espacio muestral $\\Omega$. La función probabilidad debe cumplir  tres propiedades: $\\quad\\vspace{0.5mm}$\n",
+    "  (c) A *probability function* that we denote with the letter $P$. this function must assign a number $P(A)$ to every random event $A$ in $\\Omega$. And to be a probability the function $P$ should have these three properties (the *axioms of probability*)\n",
     "    \n",
-    "        1. $P(\\Omega) = 1$.\n",
-    "        2. Sea cual sea el suceso aleatorio $A$, se tiene $0\\leq P(A)\\leq 1$.\n",
-    "        3. Si $A_1$ y $A_2$ son  dos sucesos aleatorios entonces \n",
-    "        $$P(A_1\\cup A_2) = P(A_1) + P(A_2) - P(A_1 \\cap A_2)$$\n",
+    "    1. $P(\\Omega) = 1$\n",
+    "    2. For every random event $A$, we have $0\\leq P(A)\\leq 1$.\n",
+    "    3. If $A_1$ and $A_2$ are two random events then \n",
+    "    $$P(A_1\\cup A_2) = P(A_1) + P(A_2) - P(A_1 \\cap A_2)$$\n",
     "\n",
-    "+ Aquí $A_1\\cup A_2$ es la *unión* de sucesos y $A_1 \\cap A_2$ la *intersección*, como ilustra el diagrama de Venn (cambia probabilidades por áreas e imagina que el área del rectángulo es 1).\n"
+    "+ Here $A_1\\cup A_2$ is the *union* of the random events while $A_1 \\cap A_2$ is their *intersection*, as illustrated by the Venn diagram below (exchange probabilities with areas and imagine that the area of the rectangle is 1).\n",
+    "![](fig/03-fig02-DiagramaVennInterseccionSucesos.png)\n"
    ]
   },
   {
@@ -595,9 +598,9 @@
    "id": "a9e9728a",
    "metadata": {},
    "source": [
-    "### Further Properties of Probability \n",
+    "## Further Properties of Probability \n",
     "\n",
-    "+ En la próxima sesión veremos ejemplos concretos y útiles de como construir esas funciones de probabilidad tanto en casos discretos como continuos. \n",
+    "+ In the next session we will see concrete and useful examples of how to construct those probability functions, both for discrete and continuous problems.\n",
     "\n",
     "+ La probabilidad del *suceso vacío* $\\emptyset$ es $0$; es decir $P(\\emptyset)=0.$  \n",
     "+ Dos sucesos $A_1$ y $A_2$ se llaman *incompatibles* o *disjuntos* si su intersección es vacía; es decir, no pueden ocurrir a la vez. En tal caso:\n",
@@ -692,6 +695,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
