--- a/03-Probability.ipynb
+++ b/03-Probability.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "68f2a8fa",
+   "id": "d28d89a7",
    "metadata": {},
    "source": [
     "### <img src='./fig/vertical_COMILLAS_COLOR.jpg' style= 'width:70mm'>\n",
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "52f6585b",
+   "id": "0137c2cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3cc0889",
+   "id": "b11ca757",
    "metadata": {},
    "source": [
     "# Conditional Probability and Independence\n",
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be5a3da1",
+   "id": "b3df4b9a",
    "metadata": {},
    "source": [
     "## Total Probability.\n",
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a90901a",
+   "id": "110821bf",
    "metadata": {},
    "source": [
     "## Bayes Theorem\n",
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7db38825",
+   "id": "cb8822a4",
    "metadata": {},
    "source": [
     "+ **Example:** the hardest part when using Bayes theorem tends to be retrieving the required information from the data we are provided with.  \n",
@@ -765,10 +765,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b39d66f5",
+   "id": "72028796",
    "metadata": {},
    "source": [
-    "+ **Example:** we will be using a data set called *spam*, a classical example containing information about a sample of email messages. The table contains information about thousands of messages. Each row shows (corresponding to a message) the relative frequency of appearance in the body of that  message of the words from a certain set. That set of words appears as header of the first 57 columns in this table (that is, there is a column for each word).  The last column classifies the message as spam / no spam. \n",
+    "+ **Example:** we will be using a [data set called *spam*](https://raw.githubusercontent.com/mbdfmad/fmad2223/main/data/spam.csv), a classical example containing information about a sample of email messages. The table contains information about thousands of messages. Each row shows (corresponding to a message) the relative frequency of appearance in the body of that  message of the words from a certain set. That set of words appears as header of the first 57 columns in this table (that is, there is a column for each word).  The last column classifies the message as spam / no spam. \n",
     "\n",
     "  Use Python to read the data and answer this questions:\n",
     "\n",
@@ -781,6 +781,14 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fbd6f1c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
