--- a/Assignment 1.ipynb
+++ b/Assignment 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "eb947e48",
+   "id": "7dfd2619",
    "metadata": {},
    "source": [
     "<img src='./fig/vertical_COMILLAS_COLOR.jpg' style= 'width:70mm'>\n",
@@ -20,17 +20,29 @@
     "<h1 style='font-family: Optima;color:#ecac00'>\n",
     "Assignment 1\n",
     "<a class=\"tocSkip\">    \n",
-    "</h1>  "
+    "</h1>  \n",
+    "    \n",
+    "</h1>\n",
+    "\n",
+    "<h1 style='font-family: Optima;color:red'>\n",
+    "Due Date: 2009-09-13\n",
+    "<a class=\"tocSkip\">    \n",
+    "</h1>  \n",
+    "\n",
+    "    \n",
+    "    "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "40052904",
+   "id": "8970b385",
    "metadata": {},
    "source": [
     "# Preliminaries\n",
     "\n",
-    "+ You are expected to submit your answers using the Jupyter notebook format. If you want to include additional files (data, scripts, figures, etc.) create a zip file containing all the files and email that file to us. \n",
+    "+ You are expected to submit your answers using the Jupyter notebook format. You can use this notebook as a template, but make sure to add your personal information (name and email) at the top of the notebook\n",
+    "\n",
+    "+ If you want to include additional files (data, scripts, figures, etc.) create a zip file containing all the files and email that file to us. \n",
     "\n",
     "# Question 1\n",
     "\n",
@@ -70,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2d556df",
+   "id": "621cf4e6",
    "metadata": {},
    "outputs": [],
    "source": []
