--- a/04 Random Variables.ipynb
+++ b/04 Random Variables.ipynb
@@ -130,19 +130,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfc678f7",
+   "id": "2629d400",
    "metadata": {},
    "source": [
-    "+ A discrete random variable $X$ is therefore a theoretical model for the distribution of values of a random variable in a population. The **population mean** or **expectation** of $X$ represents the mean or average of the values that $X$ takes *in the population*. It is denoted with the greek letter $\\mu$ and also wit the symbol $E(X)$. Similarly we define the **population variance** $\\sigma^2$.\n",
+    "+ A discrete random variable $X$ is therefore a theoretical model for the distribution of values of a random variable in a population. The **population mean** or **expectation** of $X$ represents the mean or average of the values that $X$ takes *in the population*. It is denoted with the greek letter $\\mu$ and also wit the symbol $E(X)$. When we need to clarify the random variable involved we will sometimes use a symbol such as $\\mu_X$.\n",
     "\n",
+    "+ Similarly we define the **population variance** $\\sigma^2$, using all the values in the population. Both $\\mu$ and $\\sigma^2$ should be considered as abstract or also *hidden* values that we want to *estimate*, getting approximate values, but we can not actually obtain with certainty."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4134991",
+   "metadata": {},
+   "source": [
     "+ One of the main goals of Statistics is to use sample data to estimate parameters of a population. Suppose that the discrete variable $X$ takes $n$ different values $x_1, x_2,\\ldots, x_k$. If we have a sample of $X$ and the absolute frequencies **in that sample** are $f_1, f_2, \\ldots,f_k$, then we can use that sample to give an estimate of the *population mean* $\\mu$ using the *sample mean*: \n",
     "$$\n",
     "\\quad\\\\\n",
     "\\bar X = \\dfrac{x_1 f_1 + \\cdots + x_k f_k}{n} = x_1 fr_1 + \\cdots + x_k fr_k\n",
     "\\quad\\\\\n",
     "$$  \n",
-    "  where $fr_1, \\ldots, fr_k$ are the *sample relative frequencies*. It is very important that you realize that $\\bar X$ is an empirical quantity that comes out of a sample. Therefore it is something that we can compute using that sample that we have. On the other hand $\\mu$ is a theoretical quantity because it belongs to the population and we do not have access to the population (we would not be needing Statistic if we did!).\n",
-    "\n",
+    "  where $fr_1, \\ldots, fr_k$ are the *sample relative frequencies*. It is very important that you realize that $\\bar X$ is an empirical quantity that comes out of a sample. Therefore it is something that we can compute using that sample that we have. On the other hand $\\mu$ is a theoretical quantity because it belongs to the population and we do not have access to the population (we would not be needing Statistic if we did!)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfc678f7",
+   "metadata": {},
+   "source": [
     "+ Now, looking at the last formula, recall that the relative frequencies are closely related with probabilities. In fact, the idea of probability first appeared as a theoretical model of the relative frequency. And so if we want to give a theoretical definition of the mean or expectation of a discrete random variable the only sensible choice is this:\n",
     "<h5 style= 'text-align:center;color:#ecac00'>\n",
     "Mean of a Discrete Random Variable $X$\n",
@@ -223,10 +237,58 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d700992b",
+   "metadata": {},
+   "source": [
+    "### Operations on Discrete Random Variables\n",
+    "\n",
+    "+ **Example:** Assume that the population of interest is the set of households in a given city. And let the random variable $X$ represent the annual home insurance paid by each household. Similarly, let $Y$ represent the annual life insurance for each household. When we want to obtain the total amount of both insurance payments combined we need to consider the sum of the random variables $X + Y$. In many examples like this we would like to use the information about $X$ and $Y$ to obtain the properties of their sum $X + Y$ without having to redo the calculation. \n",
+    "\n",
+    "+ More generally, we are often interested in *linear combinations* of random variables, such as \n",
+    "$$\n",
+    "\\quad\\\\\n",
+    "a\\,X + b\\,Y,\\qquad\\text{ where }a\\text{ and }b\\text{ are numeric coefficients.}\n",
+    "\\quad\\\\\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bd0b5570",
    "metadata": {},
    "source": [
-    "### Operations on Discrete Random Variables"
+    "+ The mean or expectation of such a linear combination is simply the same linear combination of the expectations  of the individual variables:\n",
+    "$$\n",
+    "\\quad\\\\\n",
+    "E(a\\,X + b\\,Y) = a\\,E(X) + b\\,E(Y)\n",
+    "\\quad\\\\\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59fa93bd",
+   "metadata": {},
+   "source": [
+    "+ For the variance things get a little more complicated, because we need the notion of independence. Informally, $X$ and $Y$ are independent if knowledge about the value of $X$ does not affect the probability of the values of $Y$. The **covariance** of $X$ and $Y$ is\n",
+    "$$\n",
+    "\\quad\\\\\n",
+    "\\operatorname{cov}(X, Y) = E((X - \\mu_X)(Y - \\mu_Y))\n",
+    "\\quad\\\\\n",
+    "$$\n",
+    "and the most general result says that\n",
+    "$$\n",
+    "\\quad\\\\\n",
+    "\\sigma^2(a\\,X + b\\, Y) = a^2\\,\\sigma^2_X + b^2\\,\\sigma^2_Y + 2\\,a\\,b\\, \\operatorname{cov}(X, Y)\n",
+    "\\quad\\\\\n",
+    "$$\n",
+    "+ When $X$ and $Y$ are independent it turns out that $\\operatorname{cov}(X, Y) = 0$ (creful, it does not work the other way round) and therefore **in the independence case** we get a simpler formula:\n",
+    "$$\n",
+    "\\quad\\\\\n",
+    "\\sigma^2(a\\,X + b\\, Y) = a^2\\,\\sigma^2_X + b^2\\,\\sigma^2_Y\n",
+    "\\quad\\\\\n",
+    "$$\n",
+    "\n"
    ]
   },
   {
@@ -239,10 +301,137 @@
   },
   {
    "cell_type": "markdown",
+   "id": "06cc7fc4",
+   "metadata": {},
+   "source": [
+    "+ The **distribution function** $F_X$ of a random variable $X$ (discrete or continuous) is defined by:\n",
+    "$$\n",
+    "\\quad\\\\\n",
+    "F_X(k) = P(X\\leq k)\\qquad\\text{ for any number }k\n",
+    "\\quad\\\\\n",
+    "$$\n",
+    "You may think of $F(k)$ as the theoretical version of the table of cumulative relative frequencies. Therefore, it answers the question \"*what is the probability that $X$ takes a value $\\leq k$?*\"\n",
+    "\n",
+    "+ Because they are probabilities and because of their cumulative nature the typical graph for the distribution function of a discrete variable is a **stair shaped** graph like this one, climbing from 0 to 1 with a jump at each value of $X$ equal to the probability of that value:\n",
+    "![](fig/04-01-FuncionDistribucionVariableAleatoria.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b78cb7f8",
    "metadata": {},
    "source": [
     "## Binomial Variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "505620ec",
+   "metadata": {},
+   "source": [
+    "### Bernouilli Random Variables\n",
+    "\n",
+    "+ A Bernouilli random variable is a very simple discrete random variable that only takes two values, 0 and 1, with the following probability table:\n",
+    "$$\n",
+    "\\quad\\\\\n",
+    "\\begin{array}{|l|c|c|}\n",
+    "    \\hline\n",
+    "    \\rule{0cm}{0.5cm}\\text{Value of }X:&1&0\\\\\n",
+    "    \\hline\n",
+    "    \\rule{0cm}{0.5cm}\\text{Probability for that value:}& p & q = 1 - p\\\\\n",
+    "    \\hline\n",
+    "\\end{array}\n",
+    "\\quad\\\\\n",
+    "$$\n",
+    "These values 1 and 0 are (arbitrarily) called *success* and *failure* respectively.\n",
+    "\n",
+    "+ These Bernouilli type variables are useful because they are the building blocks for more complex types of variables, as we will soon see.\n",
+    "\n",
+    "+ **Example:** the variable $X = $ \"number of appearances of six when rolling a single dice\" is a Bernouilli variable with $p = 1/6$ and $q = 5/6$. We denote this with $X\\sim Bernouilli(p)$ (the symbol $\\sim$ is read \"is of type ...\")\n",
+    "\n",
+    "+ The mean of a random variable $X\\sim Bernouilli(p)$ is $\\mu = p$, and its variance is $\\sigma^2 = p\\cdot q = p(1 - p)$.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82c27a33",
+   "metadata": {},
+   "source": [
+    "### Binomial Random Variables\n",
+    "\n",
+    "+ **Example:** Suppose that we roll a dice 11 times and we use that experiment (the whole set of 11 rolls of the dice) to define a random variable $X$ where:\n",
+    "$$\n",
+    "\\quad\\\\\n",
+    "X = \\textit{number of appearances of 6 in those 11 rolls of the dice}\n",
+    "\\quad\\\\\n",
+    "$$\n",
+    "\n",
+    "+ The situation in this example has these characteristics:\n",
+    "\n",
+    "  $(1)$ There is a **basic experiment**, rolling a dice in this case, that gets **repeated $n$ times** (in the example $n = 11$).  \n",
+    "  \n",
+    "  $(2)$  The $n$ repeated basic experiments are **independent** of each other. That is, the outcome of one of the experiments is not affected in any way by the outcome of the others.\n",
+    "  \n",
+    "  $(3)$  Every individual instance or trial of the basic experiment can only result in **success** (in the example, rolling a 6) represented with value $1$; o in **failure** (not rolling a 6) represented with value 0.  \n",
+    "  \n",
+    "  $(4)$  The **probability of success** for every trial is $p$ and that for failure is therefore $q = 1- p$. In the example $p = 1/6, q= 5/6$.  \n",
+    "  \n",
+    "  $(5)$ Finally, **our variable $X$ is the number of successful trials (with outcome 1) in the whole set of $n$ independent trials**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10388560",
+   "metadata": {},
+   "source": [
+    "+ **Definition of Binomial Variable**  \n",
+    "  A discrete random variable  $X$ with the above characteristics is a binomial variable with parameters $n$ and $p$, and we will use the symbol $X \\sim B(n, p)$ to denote this. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f3acaba",
+   "metadata": {},
+   "source": [
+    "### Experiments with Binomial Variables using Python\n",
+    "\n",
+    "+ Let us see an example of a binomial variable. We will use the `prevalentHyp` variable in the `framingham` table that we have used in previous sessions. The variable takes the value 1 if the patient is hypertensive and 0 otherwise. Keep in mind that 1 and 0 are arbitrary, and so in this example *success* actually means that the patient is in fact hypertensive. \n",
+    "\n",
+    "+ **Exercise:**  \n",
+    "    (a) Load the data table into the `framingham` pandas DataFrame. You have done this before.  \n",
+    "    (b) Find the probability that a randomly chosen patient is hypertensive, and call it $p$.  \n",
+    "    (c) Instead of choosing a single patient, suppose that we choose seven patients at random and with replacement. Let $X$ denote the number of hypertensive patients among those seven. What values can this variable $X$ actually take?  \n",
+    "    (d) Use Python to choose a sample of seven patients (with replacement) and count the number of hypertensive patients in that sample.  \n",
+    "    (e) Iterate the previous step $N = 50000$ times and store the 50000 results in a NumPy array called `X_samples`. Get a relative frequency table of the different values in `X_samples.`  \n",
+    "(f) Choose the right plot to illustrate the contents of `X_samples`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "554995ff",
+   "metadata": {},
+   "source": [
+    "### Probability Density for Binomial Variables\n",
+    "\n",
+    "+ The table of relative frequencies that you obtained in the previous exercise is an empirical approximation of the following expression for the following:\n",
+    "$$\n",
+    "\\fbox{\n",
+    "$\n",
+    "\\quad\\\\\n",
+    "\\textbf{Theoretical probability density of a binomial variable }X\\sim B(n, p)\n",
+    "\\quad\\\\\n",
+    "\\quad\\quad\\quad\\quad\n",
+    "P(X = k) =\\displaystyle\\binom{n}{k}\\,p^k\\,q^{(n -k)}\\quad\\text{ for }\\quad k = 0, 1, 2, \\ldots, n\n",
+    "$\n",
+    "}\n",
+    "$$\n",
+    "where we recall $q = 1 - p$. Also the definition of the *binomial coefficient* is:\n",
+    "$$\n",
+    "\\dbinom{n}{k}=\\frac{\\overbrace{n\\left( n-1\\right) \\left( n-2\\right) \\cdots \\left( n-k+1\\right) }^{k\\mbox{ factors}}}{k!}\n",
+    "$$\n",
+    "where $k! = k\\cdot(k - 1)\\cdot(k - 2)\\cdot\\,\\cdots\\,\\cdot 2\\cdot 1$ is the factorial of $k$.\n",
+    "\n",
+    "* Luckily you will not have to compute these by hand, Python will do the hard work for us."
    ]
   },
   {
