WIP Session 06 and minor corrections

--- a/05 Introduction to Statistical Inference.ipynb
+++ b/05 Introduction to Statistical Inference.ipynb
@@ -752,11 +752,11 @@
    "id": "0b094f84",
    "metadata": {},
    "source": [
-    "+ **Exercise (S05-003):** we suspect that the waters of a reservoir have $NO2$ levels higher than the safe threshold for aquatic life. To study this problem we test the water concentration of $NO2$ (mg/l) at 10 different points at random in the reservoir and we obtained these values:  \n",
+    "+ **Exercise (S05-003):** we suspect that the waters of a reservoir have $NO_2$ levels higher than the safe threshold for aquatic life. To study this problem we test the water concentration of $NO_2$ (mg/l) at 10 different points at random in the reservoir and we obtained these values:  \n",
     "```\n",
     "        0.04, 0.05, 0.03, 0.06, 0.04, 0.06, 0.07, 0.03, 0.06, 0.02\n",
     "```        \n",
-    "Use `scipy.stats.t` and find a 95% confidence level interval for the mean NO2 concentration in the water of the reservoir. The danger level for NO2 is 0.03mg/l. What is your conclusion?"
+    "Use `scipy.stats.t` and find a 95% confidence level interval for the mean $NO_2$ concentration in the water of the reservoir. The danger level for $NO_2$ is 0.03mg/l. What is your conclusion?"
    ]
   },
   {
@@ -843,14 +843,14 @@
     "\\hspace{4cm}(n - 1)\\dfrac{s^2}{\\sigma^2}\\sim\\chi^2_{n - 1}\n",
     "\\quad\\\\\n",
     "\\quad\\\\\n",
-    "\\text{where $\\chi^2_{n - 1}$ is the }\\textbf{chi-squared distribution with $dof = n - 1$}\n",
+    "\\text{where $\\chi^2_{n - 1}$ is the }\\textbf{chi-squared distribution with $dof = n - 1\\quad$}\n",
     "$\n",
     "}\n",
     "$$\n",
     "</p> \n",
     "Let us see what this chi-squared distributions look like. \n",
     "\n",
-    "+ Just like the Student's $t$ (with which it is related) the Chi-squared distribution is indeed a family of distributions, one for each sample size. It is however different in that it **only takes positive values and it is highly asymmetrical.** The typical plot of the density curve for one of these Chi-squared distributions is:\n",
+    "+ Just like the Student's $t$ (to which it is related) the Chi-squared distribution is indeed a family of distributions, one for each sample size. It is however different in that it **only takes positive values and it is highly asymmetrical.** The typical plot of the density curve for one of these Chi-squared distributions is:\n",
     "![](fig/06-06-DensidadChiCuadrado.png)\n",
     "That is in fact the graph of $\\chi^2_4$. This asymmetry impacts as we will see in the construction of confidence intervals based on these distributions."
    ]
