WIP Session 07 and minor corrections

--- a/06 Hypothesis Tests.ipynb
+++ b/06 Hypothesis Tests.ipynb
@@ -5,7 +5,7 @@
    "id": "d62439e7",
    "metadata": {},
    "source": [
-    "<img src='../fig/vertical_COMILLAS_COLOR.jpg' style= 'width:70mm'>\n",
+    "<img src='./fig/vertical_COMILLAS_COLOR.jpg' style= 'width:70mm'>\n",
     "\n",
     "<h1 style='font-family: Optima;color:#ecac00'>\n",
     "Máster en Big Data. Tecnología y Analítica Avanzada (MBD).\n",
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "b73671b8",
    "metadata": {},
    "outputs": [],
@@ -1382,18 +1382,6 @@
     "    + For intermediate values $0.2 < d < 0.8$ you should always check with *expert opinion* as we said before  to judge the relevance of your findings.\n",
     "    \n",
     "  Another way to help mitigate the problem of relevance is by **shifting the focus from the testing of hypothesis to the estimation of values**. That is, instead of (or besides) testing a null about the mean, always include a confidence interval estimation about the mean value. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "696dfcfe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n"
    ]
   }
  ],
