--- a/06 Hypothesis Tests.ipynb
+++ b/06 Hypothesis Tests.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "947ff5e9",
    "metadata": {},
    "outputs": [],
@@ -1131,12 +1131,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "ab74bf74",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.942464646464642e-05\n",
+      "99\n",
+      "156.12159999999983\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.0004426690022928119"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# %load \"./exclude/S06-002.py\""
+    "# %load \"./exclude/S06-002.py\"\n",
+    "\n",
+    "gear = pd.read_csv(\"data/GEAR.txt\")\n",
+    "gear.head()\n",
+    "\n",
+    "s = gear.DIAMETER.std()\n",
+    "print(s**2)\n",
+    "n = gear.shape[0]\n",
+    "print(n - 1)\n",
+    "\n",
+    "sigma0_2 = 0.000025\n",
+    "\n",
+    "\n",
+    "chiScore = (n - 1) * s**2/sigma0_2\n",
+    "\n",
+    "print(chiScore)\n",
+    "\n",
+    "2 * stats.chi2.sf(chiScore, df = n -1)\n",
+    "\n"
    ]
   },
   {
