WIP S07 compatibility issue

--- a/07 Introduction to Models Part 1-Copy1.ipynb
+++ b/07 Introduction to Models Part 1-Copy1.ipynb
@@ -943,7 +943,7 @@
     }
    ],
    "source": [
-    "%run \"./code/07-models-02.py\""
+    "%run ./code/07-models-02.py"
    ]
   },
   {
@@ -1211,7 +1211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8ef2694",
+   "id": "2a51cd24",
    "metadata": {},
    "outputs": [],
    "source": []
