symlinks messed uo

--- a/06 Hypothesis Tests.ipynb
+++ b/06 Hypothesis Tests.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "947ff5e9",
    "metadata": {},
    "outputs": [],
@@ -41,14 +41,6 @@
     "\n",
     "#sns.set(rc={'figure.figsize':(12, 8.5)})\n",
     "sns.set()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3a0dd208",
-   "metadata": {},
-   "source": [
-    "# Introduction: a Scientific Argument"
    ]
   },
   {
@@ -1244,17 +1236,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "816a4651",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   counts  freqs\n",
+      "0       0   3577\n",
+      "1       1   3829\n",
+      "2       2   1869\n",
+      "3       3    573\n",
+      "4       4    131\n",
+      "5       5     16\n",
+      "6       6      4\n",
+      "7       7      1\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x167f3de70>"
+       "<matplotlib.legend.Legend at 0x10d128c10>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1272,7 +1279,29 @@
     }
    ],
    "source": [
-    "# %load \"./exclude/S06-003.py\""
+    "# %load \"./exclude/S06-003.py\"\n",
+    "# S06-003.py\n",
+    "\n",
+    "data = np.array(np.random.default_rng(2022).normal(loc = 0, scale = 1, size = (50, 20, 10000)))\n",
+    "\n",
+    "def ttest_pvalue(sample, mu0, sl, hyp):\n",
+    "    Tscore, pValue = stats.ttest_1samp(sample, \n",
+    "                                   popmean=popmean,\n",
+    "                                   alternative=\"greater\")\n",
+    "\n",
+    "Tscores, pValues = stats.ttest_1samp(data, popmean = 0, axis = 0, alternative='two-sided')\n",
+    "\n",
+    "counts, freqs = np.unique(np.sum(pValues < 0.05, axis=0), return_counts=True)\n",
+    "\n",
+    "print(pd.DataFrame({\"counts\":counts, \"freqs\": freqs}))\n",
+    "\n",
+    "width = 0.35  # the width of the bars\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "rects1 = ax.bar(counts - width/2, freqs/10000, width, label='Simulation')\n",
+    "rects2 = ax.bar(np.arange(8) + width/2, stats.binom.pmf(np.arange(8), 20, 0.05), width, label='Binomial')\n",
+    "ax.set_title('Relative frequencies of number of type I errors vs binomial predicted probabilities')\n",
+    "ax.legend()"
    ]
   },
   {
