Exercises and previous exams

--- a/05 Introduction to Statistical Inference.ipynb
+++ b/05 Introduction to Statistical Inference.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "4f98b151",
    "metadata": {
     "scrolled": false
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 15,
    "id": "b8f7049f",
    "metadata": {},
    "outputs": [],
@@ -761,10 +761,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 11,
    "id": "b73671b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The confidence interval is [0.03422, 0.05778]\n"
+     ]
+    }
+   ],
    "source": [
     "# %load \"./exclude/S05-003.py\""
    ]
